2008-03-10  Inge Wallin  <inge@lysator.liu.se>

	Fix Krazy issues: proper include directives.
	/src/lib/MarbleWidget.h,
	/src/lib/FileStoragePolicy.cpp,
	/src/lib/MarbleMap.cpp,
	/src/lib/StoragePolicy.h,
	/src/lib/MarbleMap_p.h,
	/src/lib/TileCreatorDialog.cpp,
	/src/lib/MarblePlacemarkModel.cpp,
	/src/lib/CacheStoragePolicy.cpp,
	/src/lib/MarbleMap.h,
	/src/lib/DiscCache.cpp,
	/src/marble_part.cpp:
	Fix include directives

2008-03-10  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/CMakeLists.txt:
    * src/lib/geodata/handlers/dgml/DGMLPropertyTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLSettingsTagHandler.cpp:
    * src/lib/geodata/handlers/dgml/DGMLAttributeDictionary.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneIcon.h:
    * src/lib/geodata/scene/GeoSceneHead.h:
    * src/lib/geodata/scene/GeoSceneSettings.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneProperty.{cpp,h}:

    Starting to get properties parsed correctly.

2008-03-10  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/CMakeLists.txt:
    * src/lib/geodata/GeoDataTest.cpp:
    * src/lib/geodata/handlers/dgml/DGMLElementDictionary.h:
    * src/lib/geodata/handlers/dgml/DGMLDiscreteTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLMaximumTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLMinimumTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLVisibleTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLZoomTagHandler.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneHead.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneZoom.{cpp,h}:

    Adding <visible>, <zoom>, <discrete>, <minimum> and <maximum>.

2008-03-09  Inge Wallin  <inge@lysator.liu.se>

	Unify painting of Measure Paths.  Now also works on Mercator
	* src/lib/MeasureTool.cpp (paintMeasurePoints): use projection
	independent code to paint the paths
	(sphericalPaintMeasurePoints): remove code to draw paths
	(rectangularPaintMeasurePoints): remove code to draw paths
	